🎉auto update by Gmeek action

--- a/backup/[ 😋关于我 ].md
+++ b/backup/[ 😋关于我 ].md
@@ -3,7 +3,7 @@
 - 2021年毕业于上海师范大学，计算机专业
 - 2021年在一个两个人的企业干了半年Java，复试通过后读研去了
 - 2023年1月开始学go，5月在一家做NFT的公司Go实习，积累了Go开发经验
-- 2024年毕业于本校，计算机硕士，在一家to B/G的公司做Go开发（刚入职就飞匈牙利呆了2个月上线QAQ，幸好有补贴）
+- 2024年毕业于本校，计算机硕士，在一家to B/G的公司做Go开发（刚入职就飞匈牙利呆了2个月上线QAQ，幸好有补贴），工作965，能躺但喜欢找事做
 
 😆我的价值观排序：
 - 家庭：希望找到灵魂契合的人一起享受生活
