🎉auto update by Gmeek action

--- a/backup/好用的终端.md
+++ b/backup/好用的终端.md
@@ -21,3 +21,4 @@ zsh插件管理工具：
 - [zi](https://github.com/z-shell/zi)
 
 7. [warp](https://www.warp.dev/) AI智能终端
+8. [Zellij](https://github.com/zellij-org/zellij) for Linux/MacOS
