🎉auto update by Gmeek action

--- a/backup/我的服务.md
+++ b/backup/我的服务.md
@@ -1,5 +1,5 @@
 - [certs.chajiuqqq.cn](https://certs.chajiuqqq.cn/) // 证书管理
 - [files.chajiuqqq.cn](https://files.chajiuqqq.cn/files/) // 文件管理
 - [blogs.chajiuqqq.cn](https://blogs.chajiuqqq.cn/) // blog
-- [photo.chajiuqqq.cn](https://photo.chajiuqqq.cn/admin) // 摄影照片展示
+- [photo.chajiuqqq.cn](https://photo.chajiuqqq.cn/) // 摄影照片展示
 - [sys.chajiuqqq.cn](https://sys.chajiuqqq.cn/) // 系统监控
