🎉auto update by Gmeek action

--- a/backup/我的服务.md
+++ b/backup/我的服务.md
@@ -3,3 +3,4 @@
 - [blogs.chajiuqqq.cn](https://blogs.chajiuqqq.cn/) // blog
 - [photo.chajiuqqq.cn](https://photo.chajiuqqq.cn/) // 摄影照片展示
 - [sys.chajiuqqq.cn](https://sys.chajiuqqq.cn/) // 系统监控
+- [alist](https://alist.chajiuqqq.cn/) //alist
